Implemented schedule handling

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "url": "https://github.com/braindead1/ioBroker.presence-simulator"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.0.0"
+    "@iobroker/adapter-core": "^2.0.0",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.0.0",
